--- a/index.html
+++ b/index.html
@@ -24,16 +24,24 @@
                 <h2>Personal Details</h2>
                 <p><strong>Name:</strong> Elton Nhlana</p>
                 <p><strong>Location:</strong> Johannesburg</p>
-                <p><strong>Languages:</strong> English, Nguni, Sotho</p>
+                <p><strong>Languages:</strong> Swati, English, Zulu, Xhosa, Pedi, Sotho, Ndebele, Tshonga</p>
+
                 <p><strong>License/Car:</strong> Yes, Yes</p>
                 <p><strong>Email:</strong> <a href="mailto:nhlana.2@gmail.com">nhlana.2@gmail.com</a></p>
+
                 <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/elton-nhlana-b0452a117">View
                         Profile</a></p>
             </div>
             <div class="col-md-6">
                 <h2>About Me</h2>
-                <p>I am a young motivated developer who enjoys being outdoors, team collaborations, being out with
-                    friends, and learning. I enjoy playing chess, pool, and engaging in constructive conversations.</p>
+                <p>I am a 28-year-old software developer from Mpumalanga. I enjoy informative conversation, knowledge
+                    sharing, chess, snooker, and swimming. I believe in logic, processes, science, and common sense.
+                    Professionally, I thrive in a cheerful, high-performing team environment.</p>
+                <p>Explore my SDLC and coding philosophy <a href="#">here</a>. You can also check out my baby growth
+                    monitoring app <a href="http://bebaapp.kebothale.co.za/docs" target="_blank">backend
+                        documentation</a> and <a
+                        href="https://drive.google.com/file/d/1nO0TMq2vqy6GLXpleANJJVZ4vTcry53r/view?usp=drive_link"
+                        target="_blank">Android mobile app</a> developed using Ionic Angular.</p>
             </div>
         </div>
     </section>
@@ -51,16 +59,35 @@
 
     <!-- Career Summary -->
     <section class="container mt-5">
-        <h2>Career Summary (5+ Years of Experience)</h2>
+        <h2>Career Summary (6+ Years of Experience)</h2>
         <div class="card mt-3">
             <div class="card-body">
-                <h5 class="card-title">Intermediate Developer - NXGN (April 2020 – Present)</h5>
-                <p>Duties: Developing Anglo American systems using SQL, C#, and Angular in a team of 3. Full stack
-                    development before and after project go-live.</p>
-                <p><strong>Reason for leaving:</strong> Seeking new challenges, especially front-end-heavy roles.</p>
+                <h5 class="card-title">Intermediate Developer - Derivco (July 2022 – Present)</h5>
+                <p>Duties: Working in a team of 8, collaborating with others to develop software for clients like Betway
+                    and GGL. Technologies used include C#, ReactJS, Couchbase, Docker, NUnit, and Jest.</p>
+                <p><strong>Reason for leaving:</strong> Seeking more learning opportunities and challenges, as I am
+                    feeling too comfortable.</p>
             </div>
         </div>
-        <!-- Add other job entries similarly -->
+
+        <div class="card mt-3">
+            <div class="card-body">
+                <h5 class="card-title">Junior and Intermediate Developer - NXGN (May 2019 – June 2022)</h5>
+                <p>Duties: Full stack developer in a team of 5, developing PPM & Anglo American systems using C#,
+                    Angular, AngularJS, and SQL.</p>
+                <p><strong>Reason for leaving:</strong> Needed new challenges and learning opportunities, leading me to
+                    embrace SOLID principles and IDesign methodology.</p>
+            </div>
+        </div>
+
+        <div class="card mt-3">
+            <div class="card-body">
+                <h5 class="card-title">Blockchain & UI Developer - The Digital Academy (August 2017 – April 2019)</h5>
+                <p>Duties: Part of a team that developed a loyalty program for MTN. Developed Node.js + Express, MySQL,
+                    Angular applications.</p>
+                <p><strong>Reason for leaving:</strong> Contract ended.</p>
+            </div>
+        </div>
     </section>
 
     <!-- Skills Section -->
@@ -77,18 +104,33 @@
             <tbody>
                 <tr>
                     <td>JavaScript</td>
-                    <td>10</td>
+                    <td>8</td>
                     <td>5 Years</td>
                 </tr>
                 <tr>
                     <td>Angular</td>
-                    <td>10</td>
+                    <td>8</td>
                     <td>5 Years</td>
                 </tr>
                 <tr>
                     <td>Node.JS</td>
                     <td>9</td>
                     <td>5 Years</td>
+                </tr>
+                <tr>
+                    <td>Docker</td>
+                    <td>9</td>
+                    <td>4 Years</td>
+                </tr>
+                <tr>
+                    <td>Continuous Integration (Azure DevOps)</td>
+                    <td>9</td>
+                    <td>4 Years</td>
+                </tr>
+                <tr>
+                    <td>Kubernetes and Helm</td>
+                    <td>5</td>
+                    <td>2 Years</td>
                 </tr>
                 <!-- Add more skills as needed -->
             </tbody>
